--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -365,6 +365,7 @@
   <script src=" {% static 'js/main.js' %} "></script>
 
   <script>
+    let ws_scheme = window.location.protocol == "https:" ? "wss" : "ws" //! New
     const socket = new WebSocket(`ws://${window.location.host}/ws/video/feed/`);
     let video_feed = document.querySelector('#video-stream');
     socket.onmessage = function (e) {
