--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -79,7 +79,7 @@
     </header>
 
     <main class="main-content">
-      <section class="site-section-hero bg-image" style="background-image: url('{% static "images/bg.jpg" %}')"
+      <section class="site-section-hero bg-image" 
         data-stellar-background-ratio="0.5" id="section-home">
         <div class="row justify-content-center align-items-center">
           <div class="col-md-7 text-center">
@@ -97,7 +97,7 @@
           </div>
         </div>
       </section>
-
+<style>#section-home{background-image: url('{% static "images/bg.jpg" %}');}</style>
       <div class="container-fluid">
         <section class="row align-items-stretch photos" id="section-controls">
           <div class="col-12">
@@ -207,8 +207,6 @@
           <div class="col-12">
             <div class="row align-items-stretch m-3">
               
-              {% for file in files  %}
-              {% for Vname,Vpath in file.items %}
               <article class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
                 <figure>
                   <a href={{ Vpath }} class="d-block photo-item" data-fancybox="gallery">
@@ -219,12 +217,9 @@
                   </a>
                 </figure>
                 <h2 class="font-weight-light text-white text-center">
-                  {{ Vname }}
+                    //TODO implement recorded videos Here
                 </h2>
               </article>
-              {% endfor %}
-              {% endfor %}
-
             </div>
           </div>
         </section>
@@ -347,7 +342,7 @@
   </div>
 
 
-  <script src=" {% static 'js/jquery-3.3.1.min.js' %} "></>
+  <script src=" {% static 'js/jquery-3.3.1.min.js' %} "></script>
   <script src=" {% static 'js/jquery-migrate-3.0.1.min.js' %} "></script>
   <script src=" {% static 'js/jquery.easing.1.3.js' %} "></script>
   <script src=" {% static 'js/jquery-ui.js' %} "></script>
