--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -15,7 +15,7 @@
   <!-- mediapipe -->
   <link href="{% static 'https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900|Oswald:400,700"
     rel="stylesheet' %} " />
-  <link href="{% static 'https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet' %} "
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet' %} "
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap-switch-button@1.1.0/css/bootstrap-switch-button.min.css"
     rel="stylesheet" />
