--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,16 +6,9 @@
   <title>Website</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- mediapipe libs -->
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils/camera_utils.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/control_utils/control_utils.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@mediapipe/face_detection/face_detection.js"
-    crossorigin="anonymous"></script>
-  <!-- mediapipe -->
-  <link href="{% static 'https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900|Oswald:400,700"
-    rel="stylesheet' %} " />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet' %} "
+
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900|Oswald:400,700" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap-switch-button@1.1.0/css/bootstrap-switch-button.min.css"
     rel="stylesheet" />
@@ -209,7 +202,7 @@
               
               <article class="col-12 col-md-6 col-lg-4" data-aos="fade-up">
                 <figure>
-                  <a href={{ Vpath }} class="d-block photo-item" data-fancybox="gallery">
+                  <a href="" class="d-block photo-item" data-fancybox="gallery">
                     <img src="{% static 'images/1.jpg' %} " alt="Image" class="img-fluid" />
                     <div class="photo-text-more">
                       <span class="icon icon-search"></span>
